tests/errors/extraneous_function_decl.ceos
foo<T>(n: T): T {  }(1){  }
